--- a/src/Frontend/src/variables.less
+++ b/src/Frontend/src/variables.less
@@ -1,4 +1,5 @@
-@maxLaptopWidth: 1280px;
+/* Temporary maxLaptopWidth = 1340px due to legacy .container width. In future replace width @maxLaptopWidth: 1280px */
+@maxLaptopWidth: 1340px;
 @maxTabletWidth: 991px;
 @maxPhoneWidth: 767px;
 
